# ralph-claude

./: Cargo.toml  README.md
porpus-tests/: README.md  run-test.sh
porpus-tests/personas/: cold-minimalist.md  contradictory-thinker.md  eager-optimist.md
porpus-tests/sessions/eager-optimist-live/: alex-conversation.exp  output.txt
porpus-tests/sessions/eager-optimist-test/: test.db
porpus-tests/sessions/strategy-test/: test.db-shm  test.db-wal
src/: main.rs
templates/: CLAUDE.md  PRD.json  guardrails.md  progress.md  settings.json
templates/commands/: build.md  interview.md  plan.md  ralph.md
