[package]
name = "ralph"
version = "0.1.0"
edition = "2021"
description = "A minimal CLI for running Claude Code in autonomous loops"
license = "MIT"
repository = "https://github.com/tylerstupart/ralph-claude"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
colored = "2"
